--- a/index.html
+++ b/index.html
@@ -2,6 +2,40 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="robots" content="follow, index" />
+    <meta
+      content="Apoya causas sociales, emprendedores innovadores y fundaciones. Dona, apoya y contribuye a crear un impacto positivo en la comunidad."
+      name="description"
+    />
+    <meta
+      name="keywords"
+      content="crowdfunding, KUZI FUND, apoyo social, emprendedores, fundaciones, donaciones, causas sociales, Perú, filantropía, impacto positivo"
+    />
+
+    <link rel="canonical" href="https://www.kuzifund.com" />
+    <meta
+      property="og:title"
+      content="Kuzi Fund - Impulsa Causas, Transforma Comunidades"
+    />
+    <meta
+      property="og:description"
+      content="Apoya causas sociales, emprendedores innovadores y fundaciones. Dona, apoya y contribuye a crear un impacto positivo en la comunidad."
+    />
+    <meta property="og:image" content="/Images/Kuzi-tags.jpg" />
+    <meta property="og:url" content="https://www.kuzifund.com" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      content="Kuzi Fund - Impulsa Causas, Transforma Comunidades"
+      name="twitter:title"
+    />
+    <meta
+      name="twitter:description"
+      content="Apoya a causas sociales, emprendedores y fundaciones con KUZI FUND. Contribuye a crear un impacto positivo."
+    />
+    <meta property="og:image" content="/Images/Kuzi-tags.jpg" />
+
     <link
       rel="icon"
       type="image/jpg"
@@ -15,7 +49,7 @@
       sizes="32x32"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kuzi</title>
+    <title>Kuzi Fund - Impulsa Causas, Transforma Comunidades</title>
   </head>
   <body>
     <div id="root"></div>
