--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="keywords"
-      content="crowdfunding, KUZI FUND, apoyo social, emprendedores, fundaciones, donaciones, causas sociales, Perú, filantropía, impacto positivo"
+      content="crowdfunding, Kuzi fund, apoyo social, emprendedores, fundaciones, donaciones, causas sociales, Perú, filantropía, impacto positivo"
     />
 
     <link rel="canonical" href="https://www.kuzifund.com" />
